--- a/src/sass/_saper.scss
+++ b/src/sass/_saper.scss
@@ -8,7 +8,6 @@
 		justify-content: center;
 		flex-wrap: wrap;
 		margin: 1em auto;
-		width: calc((100px + 6.5px) * 5);
 
 		&-bg {
 			position: absolute;
